# t32mcp

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md
.claude/skills/skill-trace32/: SKILL.md
.claude/skills/skill-trace32/scripts/: core_get_instructions.cmm  core_get_registers.cmm  core_set_register.cmm  core_step.cmm  get_state.cmm  mem_clear_breakpoints.cmm  mem_dump_address.cmm  mem_get_address.cmm  mem_set_breakpoint.cmm  mem_trace_address.cmm  set_halted.cmm  set_running.cmm  soc_get_state.cmm  sw_fgrep_source.cmm  sw_get_locals.cmm  sw_get_source.cmm  sw_get_source_file.cmm  sw_get_stack_frame.cmm  sw_get_symbols.cmm  sw_set_breakpoint.cmm  sw_step_into.cmm  sw_step_over.cmm
ci/: check_version.sh  extract_changelog.sh
t32mcp-rs/: Cargo.toml  build.rs  rust-toolchain.toml
t32mcp-rs/lib/: LICENSE  t32.h  t32api64.lib
t32mcp-rs/src/: lib.rs  main.rs
t32mcp-rs/tests/: README.md  flood_pipe.cmm  test_t32.rs
tests/: README.md  conftest.py  pyproject.toml  test_initialization.py
