[project]
name = "t32mcp-test"
version = "0.1.0"
description = "Test environment for t32mcp"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.2.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(levelname)s\t%(message)s"
asyncio_mode = "auto"
